# ChangeLog for net-irc/ngircd
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/ngircd/ChangeLog,v 1.32 2007/09/22 13:45:11 nixnut Exp $

  22 Sep 2007; nixnut <nixnut@gentoo.org> ngircd-0.10.3.ebuild:
  Stable on ppc wrt bug 193229

  20 Sep 2007; Raúl Porcel <armin76@gentoo.org> ngircd-0.10.3.ebuild:
  x86 stable wrt #193229

  13 Aug 2007; Matti Bickel <mabi@gentoo.org> ngircd-0.10.2.ebuild:
  ppc stable (bug #185565)

*ngircd-0.10.3 (05 Aug 2007)

  05 Aug 2007; Raúl Porcel <armin76@gentoo.org> +ngircd-0.10.3.ebuild:
  Version bump

  16 Jul 2007; Raúl Porcel <armin76@gentoo.org> ngircd-0.10.2.ebuild:
  x86 stable wrt #185565

*ngircd-0.10.2 (12 Jun 2007)

  12 Jun 2007; Raúl Porcel <armin76@gentoo.org> +ngircd-0.10.2.ebuild:
  Version bump, thanks to Marek Czernohous <mc at it42 dot de> in bug 181521

  24 Apr 2007; Raúl Porcel <armin76@gentoo.org> -ngircd-0.8.3.ebuild:
  old

  24 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  ngircd-0.10.1.ebuild:
  ppc stable, bug #171419

  08 Apr 2007; Raúl Porcel <armin76@gentoo.org> ngircd-0.10.1.ebuild:
  Restrict tests, as they don't work

  19 Mar 2007; Raúl Porcel <armin76@gentoo.org> ngircd-0.10.1.ebuild:
  x86 stable wrt bug 171419

*ngircd-0.10.1 (19 Feb 2007)

  19 Feb 2007; Raúl Porcel <armin76@gentoo.org> -ngircd-0.9.2-r1.ebuild,
  -ngircd-0.10.0.ebuild, +ngircd-0.10.1.ebuild:
  Version bump, bug 160481, clean old

*ngircd-0.10.0 (18 Oct 2006)

  18 Oct 2006; Markus Ullmann <jokey@gentoo.org> -ngircd-0.8.3-r1.ebuild,
  -ngircd-0.9.2.ebuild, +ngircd-0.10.0.ebuild:
  Version bump wrt bug #149927 and cleanup

  15 Feb 2006; Alec Warner <antarus@gentoo.org> ngircd-0.9.2-r1.ebuild
  Fixed an error in IUSE reported by Ciaran <ciaranm@gentoo.org>

*ngircd-0.9.2-r1 (10 Feb 2006)
*ngircd-0.8.3-r1 (10 Feb 2006)

  10 Feb 2006; Alec Warner <antarus@gentoo.org> +ngircd-0.8.3-r1.ebuild,
  +ngircd-0.9.2-r1.ebuild: