@@ -1,3 +1,0 @@
-MD5 d2314beaf6d393b7c13e230b4927b608 ngircd-0.10.1.tar.gz 308228
-RMD160 26e1f4e3e92ab0a750886ce5ecdbc7c3e388ea61 ngircd-0.10.1.tar.gz 308228
-SHA256 9ffc677d1bb26cde4ee85eb9cf747cbf49cd781a00d0180371b2c107720f7d09 ngircd-0.10.1.tar.gz 308228
