@@ -1,3 +1,0 @@
-MD5 9468e2fb9c0bcc6d640f2e0e3cf2ca18 ngircd-0.10.2.tar.gz 311767
-RMD160 e047a1c7b58838087c2e1ed4ffc1244c76b5b401 ngircd-0.10.2.tar.gz 311767
-SHA256 fa7e17f16ee049b9be096f287e5bc45e6981228a156db137a79d987ae69af0f0 ngircd-0.10.2.tar.gz 311767
