@@ -1,6 +1,10 @@
 # ChangeLog for net-irc/unrealircd
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/unrealircd/ChangeLog,v 1.62 2007/10/06 15:32:29 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/unrealircd/ChangeLog,v 1.63 2007/10/08 15:15:49 armin76 Exp $
+
+  08 Oct 2007; Raúl Porcel <armin76@gentoo.org>
+  -unrealircd-3.2.6-r1.ebuild:
+  old
 
   06 Oct 2007; Tobias Scherbaum <dertobi123@gentoo.org>
   unrealircd-3.2.7.ebuild:
