@@ -1,6 +1,10 @@
 # ChangeLog for net-irc/ngircd
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/ngircd/ChangeLog,v 1.32 2007/09/22 13:45:11 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/ngircd/ChangeLog,v 1.33 2007/10/08 15:17:39 armin76 Exp $
+
+  08 Oct 2007; Raúl Porcel <armin76@gentoo.org> -ngircd-0.10.1.ebuild,
+  -ngircd-0.10.2.ebuild:
+  old
 
   22 Sep 2007; nixnut <nixnut@gentoo.org> ngircd-0.10.3.ebuild:
   Stable on ppc wrt bug 193229
